environments/test/apps/app-graphtuitous/services/graphtuitous/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: graphtuitous
    app.kubernetes.io/part-of: app-graphtuitous
  name: graphtuitous
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: graphtuitous
      app.kubernetes.io/part-of: app-graphtuitous
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: graphtuitous
        app.kubernetes.io/part-of: app-graphtuitous
    spec:
      containers:
      - image: quay.io/shbose/graphtuitous-gitops:sbose78-patch-9-258e70334767412bd2c35e032923d51f71daca22
        imagePullPolicy: Always
        name: graphtuitous
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
