environments/test/apps/app-graphtuitous/services/graphtuitous/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: all
  annotations:
    openshift.io/host.generated: "true"
    haproxy.router.openshift.io/balance: roundrobin
  labels:
    app.kubernetes.io/name: graphtuitous
    app.kubernetes.io/part-of: app-graphtuitous
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: graphtuitous
    weight: 100
